test/parsing/ferguson/many-errors-2.good
many-errors-2.chpl:1: syntax error: near 't6'
many-errors-2.chpl:5: syntax error: near ';'
many-errors-2.chpl:9: syntax error: near '}'
many-errors-2.chpl:12: syntax error: near 'x'
many-errors-2.chpl:16: syntax error: near 'x'
many-errors-2.chpl:1: warning: an implicit module named 'many-errors-2' is being introduced to contain this file-scope code.
many-errors-2.chpl:1: error: attempt to redefine reserved type 'real'
